[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "caic_python"
version = "0.1.10"
description = "An async Python client for working with Colorado Avalanche Information Center data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.3",
    "aiohttp==3.8.4",
    "pydantic==2.0a4",
    "python-dateutil==2.8.*",
]

[[project.authors]]
name = "John Gorman"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/gormaniac/caic-python"
Documentation = "https://gormo.co/caic-python/"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
